# btx-engine

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.md  Structure.txt
common/: EngineConfig.cpp  EngineConfig.hpp  GameMetadata.cpp  GameMetadata.hpp  Precompiled.hpp
common/console/: CVar.cpp  CVar.hpp
common/core/: IWindow.hpp
common/input/: InputBase.hpp
common/interfaces/: ICommon.hpp  IConsole.hpp  IConsoleListener.hpp  ICore.hpp  IEngine.hpp  IFileSystem.hpp  IGame.hpp  IInput.hpp  IModelManager.hpp  IPluginSystem.hpp  IRenderFrontend.hpp
common/interfaces/plugins/: IApplication.hpp  IPlugin.hpp
common/pluginsystem/: PluginLibrary.cpp  PluginLibrary.hpp  PluginLibraryMetadata.cpp  PluginLibraryMetadata.hpp  PluginList.hpp
common/rendering/: Common.hpp  IRenderBatch.hpp  IRenderEntity.hpp  IRenderLight.hpp  IRenderView.hpp  IRenderVolume.hpp
docs/: EngineStructure.md  FolderStructure.md  Spec-ModelFormat.md  Spec-RenderFrontend.md
engine/: CMakeLists.txt  Engine.Commands.cpp  Engine.Render.cpp  Engine.cpp  Engine.hpp  Main.cpp
engine/assetmanager/: Model.cpp  Model.hpp  ModelManager.cpp  ModelManager.hpp
engine/common/: Common.cpp  Common.hpp
engine/console/: Console.cpp  Console.hpp  ConsoleBuffer.cpp  ConsoleBuffer.hpp  ConsoleListenerBasic.cpp  ConsoleListenerFile.cpp  ConsoleListenerFileOut.cpp  ConsoleListenerInteractive.cpp  ConsoleListenerTUI.cpp
engine/console/ftxui/: Scroller.hpp
engine/core/: Core.cpp  Core.hpp  VideoFormat.hpp  Window.cpp  Window.hpp
engine/filesystem/: FileSystem.cpp  FileSystem.hpp
engine/input/: AxisHandler.hpp  AxisWithDeviceId.hpp  Input.cpp  Input.hpp  InputObjects.hpp
engine/pluginsystem/: PluginSystem.cpp  PluginSystem.hpp
game/: CMakeLists.txt  Main.cpp  Precompiled.hpp
game/client/: ClientGame.cpp  ClientGame.hpp
game/server/: ServerGame.cpp  ServerGame.hpp
